Add geocoder for location address

--- a/rhc/Gemfile
+++ b/rhc/Gemfile
@@ -31,6 +31,7 @@ gem 'jbuilder', '~> 2.5'
 gem 'haml'
 gem 'haml-rails'
 
+gem 'geocoder'
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
