--- a/rhc/Gemfile
+++ b/rhc/Gemfile
@@ -50,6 +50,7 @@ group :development, :test do
 end
 
 group :test do
+  gem 'simplecov', :require => false
   gem 'database_cleaner'
   gem 'rails-controller-testing'
 end
